inclusao das fonts

--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ img {
   color: #ffffff;
   font-size: 18px;
   position: relative;
+  font-family: "poppins";
+  font-weight: 400;
 }
 
 .header-menu a:after {
@@ -146,6 +148,8 @@ a {
   font-size: 64px;
   margin-bottom: 32px;
   line-height: 1.125;
+  font-family: "poppins";
+  font-weight: 600;
 }
 
 .introducao h1 span {
@@ -156,6 +160,8 @@ a {
   font-size: 24px;
   line-height: 1.5;
   color: #b2b2b2;
+  font-family: "roboto";
+  font-weight: 400;
 }
 .introducao a {
   display: inline-block;
@@ -167,7 +173,8 @@ a {
   color: #332200;
   font-size: 18px;
   line-height: 1.33;
-  font-weight: bold;
+  font-family: "poppins";
+  font-weight: 600;
 }
 
 .introducao a:hover {
