--- a/CSS/global/header.css
+++ b/CSS/global/header.css
@@ -1,5 +1,5 @@
 .header-bg {
-  background-color: #000000;
+  background-color: var(--cor-12);
 }
 .header {
   display: flex;
@@ -21,7 +21,6 @@
 .header-menu a {
   padding: 16px 0px;
   display: inline-block;
-  color: #ffffff;
   font-size: 18px;
   position: relative;
   font-family: "poppins";
@@ -35,7 +34,7 @@
   width: 0%;
   transition: 0.3s;
   margin-top: 4px;
-  background: #ffffff;
+  background: var(--cor-0);
   position: absolute;
 }
 
@@ -52,13 +51,13 @@
   }
 
   .header-menu a {
-    background: #111111;
+    background: var(--cor-11);
     padding: 12px 16px;
     border-radius: 4px;
   }
 
   .header-menu a:hover {
-    background-color: #2e2e2e;
+    background-color: var(--cor-10);
   }
 }
 
