--- a/CSS/home/introducao.css
+++ b/CSS/home/introducao.css
@@ -1,7 +1,6 @@
 .introducao-bg {
-  background-color: #000000;
-  color: #ffffff;
-  box-shadow: inset 0 -120px #ffffff;
+  background-color: var(--cor-12);
+  box-shadow: inset 0 -120px var(--cor-0);
 }
 
 .introducao img {
@@ -46,47 +45,11 @@ a {
 }
 
 .introducao h1 {
-  font-size: 64px;
   margin-bottom: 32px;
-  line-height: 1.125;
-  font-family: "poppins";
-  font-weight: 600;
 }
 
-.introducao h1 span {
-  color: #ffbb00;
-}
 .introducao p {
   margin-bottom: 20px;
-  font-size: 24px;
-  line-height: 1.5;
-  color: #b2b2b2;
-  font-family: "roboto";
-  font-weight: 400;
-}
-.introducao a {
-  display: inline-block;
-  padding: 16px 32px;
-  background: linear-gradient(#ffbb00, #f2a50c);
-  border-radius: 4px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  text-transform: uppercase;
-  color: #332200;
-  font-size: 18px;
-  line-height: 1.33;
-  font-family: "poppins";
-  font-weight: 600;
-}
-
-.introducao a:hover {
-  background: linear-gradient(#ffb60d, #e59317);
-}
-
-@media (max-width: 600px) {
-  .introducao a {
-    padding: 12px 16px;
-    font-size: 16px;
-  }
 }
 
 @media (max-width: 1200px) {
@@ -100,7 +63,7 @@ a {
 
 @media (max-width: 800px) {
   .introducao-bg {
-    background: #111;
+    background: var(--cor-11);
     padding-top: 40px;
     box-shadow: inset 0 -60px #ffffff;
   }
