--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,11 @@
 @import "./global/global.css";
+@import "./utilidades/tipografia.css";
+@import "./utilidades/cores.css";
+
 @import "./global/header.css";
+
+/* UTILIDADES */
+@import "./utilidades/componentes.css";
+
+/* HOME */
 @import "./home/introducao.css";
