--- a/CSS/utilidades/tipografia.css
+++ b/CSS/utilidades/tipografia.css
@@ -1,13 +1,59 @@
-.texto-grande {
-  font-size: 64px;
-  line-height: 1.125;
-  font-family: "poppins";
+.font-1-xs {
+  font: 400 0.75rem/1.35 "roboto", sans-serif;
+}
+
+.font-2-xs {
+  font: 400 0.875rem/1.43 "roboto", sans-serif;
+}
+
+.font-1-s {
+  font: 400 1rem/1.5 "poppins", sans-serif;
+}
+
+.font-2-s {
+  font: 400 1rem/1.5 "roboto", sans-serif;
+}
+
+.font-1-m .font-1-m-b {
+  font: 400 1.125/1.35 "roboto", sans-serif;
+}
+
+.font-1-m-b {
   font-weight: 600;
 }
 
-.texto-medio {
-  font-size: 24px;
+.font-2-m {
+  font: 500 1.125/1.35 "roboto", sans-serif;
+}
+
+.font-1-l {
+  font: 400 1.5rem/1.5 "poppins", sans-serif;
+}
+
+.font-2-l .font-2-l-b {
+  /* 
+  (Foram substituido por uma unica linha chamada "font" na sequencia e formato para deixar mais limpo)
+  font-size: 2rem;
   line-height: 1.5;
   font-family: "roboto";
-  font-weight: 400;
+  font-weight: 400; */
+  font: 400 1.5rem/1.5 "roboto", sans-serif;
+}
+
+.font-2-l-b {
+  font-weight: 500;
+  letter-spacing: 0.015em;
+  text-transform: uppercase;
+}
+
+.font-1-xl {
+  font: 600 2rem/1.25 "poppins", sans-serif;
+}
+
+.font-2-xl {
+  font: 500 2rem/1.25 "roboto", sans-serif;
+}
+
+.font-1-xxl {
+  font: 600 4rem/1.125 "poppins", sans-serif;
 }
