--- a/CSS/utilidades/tipografia.css
+++ b/CSS/utilidades/tipografia.css
@@ -15,7 +15,7 @@
 }
 
 .font-1-m .font-1-m-b {
-  font: 400 1.125/1.35 "roboto", sans-serif;
+  font: 400 1.125rem/1.35 "poppins", sans-serif;
 }
 
 .font-1-m-b {
@@ -23,7 +23,7 @@
 }
 
 .font-2-m {
-  font: 500 1.125/1.35 "roboto", sans-serif;
+  font: 500 1.125rem/1.35 "roboto", sans-serif;
 }
 
 .font-1-l {
@@ -56,4 +56,22 @@
 
 .font-1-xxl {
   font: 600 4rem/1.125 "poppins", sans-serif;
+}
+
+@media (max-width: 1200px) {
+  .font-1-xxl {
+    font-size: 3rem;
+  }
+  .font-2-l .font-2-l-b {
+    font-size: 1.125rem;
+  }
+}
+
+@media (max-width: 800px) {
+  .font-1-xxl {
+    font-size: 2rem;
+  }
+  .font-1-xl .font-2-xxl {
+    font-size: 1.5rem;
+  }
 }
