--- a/CSS/global/global.css
+++ b/CSS/global/global.css
@@ -9,7 +9,10 @@ ul {
   list-style: none;
 }
 h1,
+h2,
+h3,
 ul,
+h4,
 p {
   margin: 0px;
 }
@@ -22,4 +25,8 @@ a {
 img {
   max-width: 100%;
   display: block;
+}
+
+img[src$=".jpg"] {
+  border-radius: 4px;
 }
