Add area tecnologia

--- a/CSS/home/introducao.css
+++ b/CSS/home/introducao.css
@@ -4,6 +4,7 @@
 }
 
 .introducao img {
+  width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 4px;
@@ -19,12 +20,6 @@ Ativando este código vai ter que colocar uma class na div
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0px 40px;
-  box-sizing: border-box;
-  max-width: 1200px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 /* Esse seria o código sem a inclusão da div entre o h1/a na introdução.
