Add pag seguros 1 e mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,6 +20,7 @@
 
 /* SEGUROS  */
 @import "./seguros/seguros.css";
-
+@import "./seguros/vantagens.css";
+@import "./seguros/perguntas.css";
 /* TERMOS  */
 @import "./termos/termos.css";
