--- a/CSS/utilidades/tipografia.css
+++ b/CSS/utilidades/tipografia.css
@@ -14,7 +14,8 @@
   font: 400 1rem/1.5 "roboto", sans-serif;
 }
 
-.font-1-m .font-1-m-b {
+.font-1-m,
+.font-1-m-b {
   font: 400 1.125rem/1.35 "poppins", sans-serif;
 }
 
@@ -30,14 +31,15 @@
   font: 400 1.5rem/1.5 "poppins", sans-serif;
 }
 
-.font-2-l .font-2-l-b {
+.font-2-l,
+.font-2-l-b {
   /* 
   (Foram substituido por uma unica linha chamada "font" na sequencia e formato para deixar mais limpo)
   font-size: 2rem;
   line-height: 1.5;
   font-family: "roboto";
   font-weight: 400; */
-  font: 500 1.5rem/1.5 "roboto", sans-serif;
+  font: 400 1.5rem/1.5 "Roboto", sans-serif;
 }
 
 .font-2-l-b {
@@ -62,7 +64,8 @@
   .font-1-xxl {
     font-size: 3rem;
   }
-  .font-2-l .font-2-l-b {
+  .font-2-l,
+  .font-2-l-b {
     font-size: 1.125rem;
   }
 }
@@ -71,7 +74,8 @@
   .font-1-xxl {
     font-size: 2rem;
   }
-  .font-1-xl .font-2-xxl {
+  .font-1-xl,
+  .font-2-xl {
     font-size: 1.5rem;
   }
 }
