--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,7 @@
 
 /* UTILIDADES */
 @import "./utilidades/componentes.css";
+@import "./utilidades/formulario.css";
 
 /* HOME */
 @import "./home/introducao.css";
@@ -26,5 +27,10 @@
 @import "./seguros/seguros.css";
 @import "./seguros/vantagens.css";
 @import "./seguros/perguntas.css";
+
+/* CONTATO  */
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
+
 /* TERMOS  */
 @import "./termos/termos.css";
