--- a/CSS/utilidades/formulario.css
+++ b/CSS/utilidades/formulario.css
@@ -6,23 +6,24 @@
 
 .form label {
   display: block;
-  font: 600 1rem/1.5 "poppins", sans-serif;
+  font: 600 1rem/1.5 "Poppins", sans-serif;
+  margin-bottom: 4px;
+}
+
+.form .col-2 {
+  grid-column: span 2;
 }
 
 .form input[type="text"],
 .form input[type="email"],
 .form textarea {
-  font: 400 1rem/1.5 "roboto", sans-serif;
+  font: 400 1rem/1.5 "Roboto", sans-serif;
   background: var(--cor-1);
   border: 1px solid var(--cor-2);
   padding: 12px;
   border-radius: 4px;
   width: 100%;
   box-sizing: border-box;
-}
-
-.form .col-2 {
-  grid-column: span 2;
 }
 
 .form input[type="text"]:focus,
@@ -39,6 +40,6 @@
     grid-template-columns: 1fr;
   }
   .form .col-2 {
-    grid-column: span 1;
+    grid-column: 1;
   }
 }
