--- a/CSS/global/header.css
+++ b/CSS/global/header.css
@@ -8,7 +8,7 @@
   justify-content: space-between;
   align-items: center;
   padding-top: 20px;
-  padding-right: 20px;
+  padding-bottom: 20px;
 }
 .header-menu {
   display: flex;
